--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -19,7 +19,10 @@ jobs:
     name: Deploy to NPM
     # As we publish the NPM package with provenance, we need to only use the GitHub hosted runners
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/main') || github.event.pull_request.merged == true
+    if: |
+      startsWith(github.ref, 'refs/tags/v') ||
+      (startsWith(github.ref, 'refs/heads/main') &&
+      github.event.pull_request.merged == true)
 
     steps:
       - name: Checkout
