--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -69,6 +69,7 @@
     "node": ">=v12"
   },
   "dependencies": {
+    "@rudderstack/analytics-js-common": "*",
     "axios-retry": "4.3.0",
     "ms": "2.1.3",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
