chore: use latest source config url

--- a/packages/sanity-suite/.env.example
+++ b/packages/sanity-suite/.env.example
@@ -1,6 +1,6 @@
 WRITE_KEY=
 DATAPLANE_URL=
-CONFIG_SERVER_HOST=https://api.rudderlabs.com
+CONFIG_SERVER_HOST=https://api.rudderstack.com
 DISTRIBUTION_TYPE=cdn
 STAGING=false
 
