--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -19,7 +19,10 @@ jobs:
     name: Deploy to NPM
     # As we publish the NPM package with provenance, we need to only use the GitHub hosted runners
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/main') || github.event.pull_request.merged == true
+    if: |
+      startsWith(github.ref, 'refs/tags/v') ||
+      (startsWith(github.ref, 'refs/heads/main') &&
+      github.event.pull_request.merged == true)
 
     steps:
       - name: Checkout
@@ -69,8 +72,15 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
         run: |
+          # Remove unnecessary fields from package.json before publishing
+          ./scripts/make-package-json-publish-ready.sh
+
           npm set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
           npx nx release publish --base=${{ env.last_monorepo_version }} --head=${{ env.current_monorepo_version }}
+
+          # Reset the changes made to package.json
+          git reset --hard
+          git clean -fd
 
       - name: Send message to Slack channel
         id: slack
