fix: update fixtures as per latest event schema change

--- a/packages/sanity-suite/__fixtures__/sourceConfig1.json
+++ b/packages/sanity-suite/__fixtures__/sourceConfig1.json
@@ -292,7 +292,7 @@
           ],
           "useNativeSDKToSend": false,
           "eventFilteringOption": "disable",
-          "extendPageViewParams": false,
+          "extendPageViewParams": true,
           "piiPropertiesToIgnore": [
             {
               "piiProperty": ""
