--- a/packages/sanity-suite/project.json
+++ b/packages/sanity-suite/project.json
@@ -11,14 +11,14 @@
       "options": {
         "jestConfig": "packages/sanity-suite/jest.config.mjs",
         "passWithNoTests": true,
-        "codeCoverage": true,
+        "codeCoverage": false,
         "watchAll": false,
         "forceExit": true
       },
       "configurations": {
         "ci": {
           "ci": true,
-          "codeCoverage": true
+          "codeCoverage": false
         }
       }
     },
