--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/rudderlabs/rudder-sdk-js/blob/main/packages/loading-scripts/README.md",
   "scripts": {
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf -rf ./reports",
-    "start": "rollup -c --watch",
+    "start": "rollup -c --watch --environment DEV_SERVER",
     "build": "npm run build:browser",
     "build:browser:modern": "exit 0",
     "build:browser:minified": "rollup -c --environment VERSION:$npm_package_version,UGLIFY",
