--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,9 @@
   },
   "defaultBase": "main",
   "release": {
-    "projects": ["*"],
+    "projects": [
+      "*"
+    ],
     "projectsRelationship": "independent",
     "releaseTagPattern": "{projectName}@{version}",
     "version": {
@@ -24,7 +26,10 @@
   },
   "targetDefaults": {
     "test": {
-      "inputs": ["default", "^test"],
+      "inputs": [
+        "default",
+        "^test"
+      ],
       "cache": true
     },
     "version": [
@@ -34,39 +39,67 @@
       }
     ],
     "build": {
-      "inputs": ["default", "^production"],
+      "inputs": [
+        "default",
+        "^production"
+      ],
       "cache": true
     },
     "build-browser": {
-      "inputs": ["default", "^production"],
+      "inputs": [
+        "default",
+        "^production"
+      ],
       "cache": true
     },
     "build-browser-modern": {
-      "inputs": ["default", "^production"],
+      "inputs": [
+        "default",
+        "^production"
+      ],
       "cache": true
     },
     "build-npm": {
-      "inputs": ["default", "^production"],
+      "inputs": [
+        "default",
+        "^production"
+      ],
       "cache": true
     },
     "build-npm-modern": {
-      "inputs": ["default", "^production"],
+      "inputs": [
+        "default",
+        "^production"
+      ],
       "cache": true
     },
     "build-package": {
-      "inputs": ["default", "^production"],
+      "inputs": [
+        "default",
+        "^production"
+      ],
       "cache": true
     },
     "build-check-size": {
-      "inputs": ["default", "^production"],
+      "inputs": [
+        "default",
+        "^production"
+      ],
       "cache": true
     },
     "check:size:build": {
-      "inputs": ["default", "^production"],
+      "inputs": [
+        "default",
+        "^production"
+      ],
       "cache": true
     },
     "check:size:json": {
-      "inputs": ["default", "^production", "{projectRoot}/.size-limit.js"],
+      "inputs": [
+        "default",
+        "^production",
+        "{projectRoot}/.size-limit.js"
+      ],
       "cache": true
     }
   },
