--- a/packages/analytics-js-common/package.json
+++ b/packages/analytics-js-common/package.json
@@ -65,9 +65,7 @@
     "ramda": "0.30.1",
     "storejs": "2.1.0"
   },
-  "devDependencies": {
-    "@types/crypto-js": "4.2.2"
-  },
+  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
