--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@vespaiach/axios-fetch-adapter": "0.3.1",
     "assert": "2.1.0",
     "axios": "1.7.2",
-    "axios-retry": "4.3.0",
+    "axios-retry": "4.4.0",
     "component-each": "0.2.6",
     "component-emitter": "2.0.0",
     "component-type": "2.0.0",
@@ -99,11 +99,11 @@
   "devDependencies": {
     "@babel/core": "7.24.7",
     "@babel/eslint-parser": "7.24.7",
+    "@babel/plugin-transform-arrow-functions": "7.24.7",
     "@babel/plugin-transform-class-properties": "7.24.7",
+    "@babel/plugin-transform-object-assign": "7.24.7",
     "@babel/plugin-transform-private-methods": "7.24.7",
     "@babel/plugin-transform-private-property-in-object": "7.24.7",
-    "@babel/plugin-transform-arrow-functions": "7.24.7",
-    "@babel/plugin-transform-object-assign": "7.24.7",
     "@babel/plugin-transform-runtime": "7.24.7",
     "@babel/preset-env": "7.24.7",
     "@babel/preset-typescript": "7.24.7",
@@ -111,11 +111,11 @@
     "@commitlint/config-nx-scopes": "19.3.1",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.1",
     "@jscutlery/semver": "5.2.2",
-    "@nx/eslint": "19.1.0",
-    "@nx/eslint-plugin": "19.1.0",
-    "@nx/jest": "19.1.0",
-    "@nx/js": "19.1.0",
-    "@nx/workspace": "19.1.0",
+    "@nx/eslint": "19.3.0",
+    "@nx/eslint-plugin": "19.3.0",
+    "@nx/jest": "19.3.0",
+    "@nx/js": "19.3.0",
+    "@nx/workspace": "19.3.0",
     "@originjs/vite-plugin-federation": "1.3.5",
     "@rollup/plugin-alias": "5.1.0",
     "@rollup/plugin-babel": "6.0.4",
@@ -143,11 +143,12 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "18.0.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-compat": "4.2.0",
+    "eslint-plugin-compat": "5.0.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-sonarjs": "1.0.3",
-    "eslint-plugin-unicorn": "53.0.0",
+    "eslint-plugin-unicorn": "54.0.0",
     "esm": "3.2.25",
     "http-server": "14.1.1",
     "husky": "9.0.11",
@@ -163,9 +164,9 @@
     "lint-staged": "15.2.7",
     "madge": "7.0.0",
     "msw": "2.3.1",
-    "nx": "19.1.0",
+    "nx": "19.3.0",
     "patch-package": "8.0.0",
-    "prettier": "3.2.5",
+    "prettier": "3.3.2",
     "rollup": "4.18.0",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
@@ -181,21 +182,22 @@
     "rollup-plugin-visualizer": "5.12.0",
     "serve": "14.2.3",
     "size-limit": "11.1.4",
-    "ts-jest": "29.1.4",
+    "ts-jest": "29.1.5",
     "ts-node": "10.9.2",
     "tslib": "2.6.3",
     "typescript": "5.4.5",
     "user-agent-data-types": "0.4.2"
   },
   "optionalDependencies": {
-    "@nx/nx-darwin-arm64": "19.1.0",
-    "@nx/nx-darwin-x64": "19.1.0",
-    "@nx/nx-linux-x64-gnu": "19.1.0",
-    "@nx/nx-win32-x64-msvc": "19.1.0",
+    "@nx/nx-darwin-arm64": "19.3.0",
+    "@nx/nx-darwin-x64": "19.3.0",
+    "@nx/nx-linux-x64-gnu": "19.3.0",
+    "@nx/nx-win32-x64-msvc": "19.3.0",
     "@rollup/rollup-linux-x64-gnu": "4.18.0"
   },
   "overrides": {
-    "debug": "4.3.4"
+    "debug": "4.3.4",
+    "ws": "7.5.10"
   },
   "lint-staged": {
     "*.{json,js,md,ts}": "prettier --write"
