chore: fix linting issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -117,7 +117,7 @@
           "error",
           {
             "allow": [],
-            "banTransitiveDependencies": false,
+            "banTransitiveDependencies": true,
             "depConstraints": [
               {
                 "sourceTag": "type:lib",
