--- a/packages/analytics-js-common/package.json
+++ b/packages/analytics-js-common/package.json
@@ -55,19 +55,17 @@
     "release": "npm publish"
   },
   "dependencies": {
-    "@preact/signals-core": "1.6.0",
+    "@preact/signals-core": "1.6.1",
     "@ndhoule/defaults": "2.0.1",
     "rudder-component-cookie": "0.0.1",
     "@segment/top-domain": "3.0.1",
     "crypto-js": "4.2.0",
     "@lukeed/uuid": "2.0.1",
     "get-value": "3.0.1",
-    "ramda": "0.30.0",
+    "ramda": "0.30.1",
     "storejs": "2.1.0"
   },
-  "devDependencies": {
-    "@types/crypto-js": "4.2.2"
-  },
+  "devDependencies": {},
   "overrides": {},
   "browserslist": {
     "production": [
