--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
       ],
       "rudder-sdk-js/*": ["./packages/analytics-v1.1/src/*"],
       "@rudderstack/analytics-js-loading-script/*": ["./packages/loading-scripts/src/*"],
-      "@rudderstack/analytics-js-sanity-suite/*": ["./packages/sanity-suite/src/*"]
+      "@rudderstack/analytics-js-sanity-suite/*": ["./packages/sanity-suite/src/*"],
+      "@rudderstack/analytics-js-cookies/*": ["./packages/analytics-js-cookies/src/*"]
     },
     "composite": true,
     "outDir": "./dist",
