--- a/packages/analytics-js/tsconfig.json
+++ b/packages/analytics-js/tsconfig.json
@@ -9,6 +9,7 @@
     "./src/**/*",
     "../../types/**/*",
     "../analytics-js-plugins/src/**/*",
-    "../analytics-js-common/src/**/*"
+    "../analytics-js-common/src/**/*",
+    "../analytics-js-cookies/src/**/*"
   ]
 }
