--- a/packages/analytics-js-cookies/tsconfig.json
+++ b/packages/analytics-js-cookies/tsconfig.json
@@ -8,8 +8,7 @@
     "./package.json",
     "./src/**/*",
     "../../types/**/*",
-    "../analytics-js-common/src/**/*",
-    "../analytics-js-cookies/src/**/*",
-    "../analytics-js/src/**/*"
-  ]
+    "../analytics-js-common/src/**/*"
+  ],
+  "references": []
 }
