--- a/packages/analytics-js-cookies/project.json
+++ b/packages/analytics-js-cookies/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "@rudderstack/analytics-js",
+  "name": "@rudderstack/analytics-js-cookies",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/analytics-js/src",
+  "sourceRoot": "packages/analytics-js-cookies/src",
   "projectType": "library",
-  "tags": ["type:sdk", "scope:analytics-v3"],
+  "tags": ["type:lib", "scope:analytics-v3-cookies"],
   "targets": {
     "start": {
       "executor": "nx:run-script",
@@ -11,28 +11,10 @@
         "script": "start"
       }
     },
-    "start-modern": {
-      "executor": "nx:run-script",
-      "options": {
-        "script": "start:modern"
-      }
-    },
     "build": {
       "executor": "nx:run-script",
       "options": {
         "script": "build"
-      }
-    },
-    "build-browser": {
-      "executor": "nx:run-script",
-      "options": {
-        "script": "build:browser"
-      }
-    },
-    "build-browser-modern": {
-      "executor": "nx:run-script",
-      "options": {
-        "script": "build:browser:modern"
       }
     },
     "build-npm": {
@@ -58,7 +40,7 @@
       "options": {
         "script": "build:package"
       },
-      "dependsOn": ["build-browser", "build-browser-modern"]
+      "dependsOn": ["build"]
     },
     "clean": {
       "executor": "nx:run-script",
@@ -76,7 +58,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/analytics-js/jest.config.mjs",
+        "jestConfig": "packages/analytics-js-cookies/jest.config.mjs",
         "passWithNoTests": true,
         "codeCoverage": true,
         "watchAll": false,
@@ -87,8 +69,7 @@
           "ci": true,
           "codeCoverage": true
         }
-      },
-      "dependsOn": ["build-browser"]
+      }
     },
     "lint": {
       "executor": "@nx/eslint:lint",
@@ -96,14 +77,14 @@
       "options": {
         "hasTypeAwareRules": true,
         "lintFilePatterns": [
-          "packages/analytics-js/src/**/*.{ts,js}",
-          "packages/analytics-js/{package,project}.json"
+          "packages/analytics-js-cookies/src/**/*.{ts,js}",
+          "packages/analytics-js-cookies/{package,project}.json"
         ]
       },
       "configurations": {
         "ci": {
           "force": true,
-          "outputFile": "packages/analytics-js/reports/eslint.json",
+          "outputFile": "packages/analytics-js-cookies/reports/eslint.json",
           "format": "json"
         }
       }
@@ -120,10 +101,10 @@
     "github": {
       "executor": "@jscutlery/semver:github",
       "options": {
-        "tag": "@rudderstack/analytics-js@3.4.0",
-        "title": "@rudderstack/analytics-js@3.4.0",
-        "discussion-category": "@rudderstack/analytics-js@3.4.0",
-        "notesFile": "./packages/analytics-js/CHANGELOG_LATEST.md"
+        "tag": "@rudderstack/analytics-js-cookies@1.0.0",
+        "title": "@rudderstack/analytics-js-cookies@1.0.0",
+        "discussion-category": "@rudderstack/analytics-js-cookies@1.0.0",
+        "notesFile": "./packages/analytics-js-cookies/CHANGELOG_LATEST.md"
       }
     }
   }
