--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -31,7 +31,7 @@
     "rudder"
   ],
   "author": "RudderStack",
-  "license": "Elastic License 2.0",
+  "license": "Elastic-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rudderlabs/rudder-sdk-js.git",
