--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -66,7 +66,7 @@
     "rudder"
   ],
   "author": "RudderStack",
-  "license": "Elastic License 2.0",
+  "license": "Elastic-2.0",
   "bugs": {
     "url": "https://github.com/rudderlabs/rudder-sdk-js/issues"
   },
