chore: update all licenses to latest (#1765)
* chore: update all licenses to latest

* chore: update all readme files to include license information

* chore: address ai bot review comments

* chore: address ai bot review comments

* chore: callout exact license in package.json file

* chore: use standard spdx license id

--- a/packages/analytics-js-integrations/package.json
+++ b/packages/analytics-js-integrations/package.json
@@ -28,7 +28,7 @@
   "publishConfig": {},
   "files": [
     "dist/npm",
-    "LICENSE",
+    "LICENSE.md",
     "README.md",
     "CHANGELOG.md"
   ],
@@ -37,7 +37,7 @@
     "rudder"
   ],
   "author": "RudderStack",
-  "license": "MIT",
+  "license": "Elastic-2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rudderlabs/rudder-sdk-js.git",
